leveled up our MVP

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     </div>
   </section>
 
+  <section>
+    <div id="languages">
 
+    </div>
+  </section>
+
+  <script src="languages.js"></script>
   <script src="news.js"></script>
 </body>
 </html>
