--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
   <section>
     <h1>CoderNews</h1>
+
+    <input type="text" id="searchTerm" />
+    <button onclick="searchNews()">Searcxh</button>
     <div class="container">
       <ul id="articles">
-
       </ul>
+
+      <button id="next" onClick="fooBar()">Next</button>
     </div>
   </section>
 
   <section>
     <div id="languages">
-
     </div>
   </section>
 
